--- a/.env.example
+++ b/.env.example
@@ -6,16 +6,8 @@ DEBUG=False
 # Database
 DATABASE_URL=postgresql://devport:password@localhost:5432/devportdb
 
-# LLM API for Korean summarization
-# Use one of the following:
+# LLM API for Korean summarization (OpenAI gpt-5-nano)
 OPENAI_API_KEY=sk-your-openai-api-key-here
-# OR
-ANTHROPIC_API_KEY=sk-ant-your-anthropic-api-key-here
-# OR
-GEMINI_API_KEY=your-gemini-api-key-here
-
-# Choose provider: "openai", "anthropic", or "gemini"
-LLM_PROVIDER=openai
 # Max completion tokens (output) per LLM request
 LLM_MAX_TOKENS=8000
 
