--- a/requirements.txt
+++ b/requirements.txt
@@ -22,10 +22,8 @@ lxml==5.1.0
 # RSS parsing
 feedparser==6.0.11
 
-# LLM APIs
-openai==1.10.0
-anthropic==0.8.1
-google-generativeai==0.3.2
+# LLM API
+openai>=2.18.0
 
 # Data processing
 pydantic==2.12.5
