feat: 포트 도메인 설정 및 환경변수 기본값 추가

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,47 @@ LLM_MAX_TOKENS=8000
 # GitHub API (for trending repos)
 GITHUB_TOKEN=ghp_your-github-token-here
 
+# Port-domain crawler defaults (Phase 4)
+# Seed scope and candidate policy
+PORT_TARGET_MIN=15
+PORT_TARGET_MAX=20
+PORT_PROJECT_TARGET_MIN=12
+PORT_PROJECT_TARGET_MAX=20
+PORT_ALLOW_UNDERFILL=True
+PORT_SEED_POLICY=hybrid
+PORT_CANDIDATE_WEIGHT_RELEVANCE=0.5
+PORT_CANDIDATE_WEIGHT_STARS=0.3
+PORT_CANDIDATE_WEIGHT_ACTIVITY=0.2
+PORT_CANDIDATE_DIVERSITY_SOFT_CAP=3
+
+# Full-history intent with practical caps
+PORT_BACKFILL_FULL_HISTORY=True
+PORT_BACKFILL_MAX_STARGAZER_PAGES=300
+PORT_BACKFILL_MAX_RELEASE_PAGES=50
+PORT_BACKFILL_MAX_TAG_PAGES=50
+PORT_BACKFILL_CHANGELOG_MAX_CHARS=120000
+
+# Daily stage cadence controls
+PORT_PROJECT_SYNC_HOURS=24
+PORT_EVENT_SYNC_HOURS=24
+PORT_METRICS_SYNC_HOURS=24
+PORT_OVERVIEW_SYNC_HOURS=24
+PORT_STAR_HISTORY_SYNC_HOURS=24
+
+# GitHub client retry/concurrency/rate-limit tuning
+PORT_GITHUB_TIMEOUT_SECONDS=30.0
+PORT_GITHUB_MAX_RETRIES=3
+PORT_GITHUB_BACKOFF_BASE_SECONDS=1.0
+PORT_GITHUB_BACKOFF_MAX_SECONDS=16.0
+PORT_GITHUB_RATE_LIMIT_BUFFER_SECONDS=2
+PORT_GITHUB_CONCURRENCY=4
+
+# Summarization retry/backoff controls
+PORT_SUMMARY_MAX_ATTEMPTS=5
+PORT_SUMMARY_BACKOFF_BASE_SECONDS=2.0
+PORT_SUMMARY_BACKOFF_MAX_SECONDS=30.0
+PORT_SUMMARY_TIMEOUT_SECONDS=45
+
 # Artificial Analysis API (for LLM rankings and media benchmarks)
 # Get your API key from https://artificialanalysis.ai/
 ARTIFICIAL_ANALYSIS_API_KEY=your-artificial-analysis-api-key-here
@@ -57,6 +98,9 @@ MAX_AGE_DAYS_HACKERNEWS=7   # Skip stories older than this
 # Reddit API (optional OAuth; falls back to public if missing)
 REDDIT_CLIENT_ID=your-reddit-client-id
 REDDIT_CLIENT_SECRET=your-reddit-client-secret
+
+# Discord webhook for failed content fetch notifications (optional)
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/1471338577697702029/U8_HGgk8jioH7w3_sBzLkLfkd0lJt8OY7mWg019qnbztiE_cMKjloNqXQ2j6loFNj8sf
 
 # AWS (if deploying to Lambda)
 AWS_REGION=us-west-2
